--- a/style.css
+++ b/style.css
@@ -650,7 +650,12 @@ nav li:nth-child(2) {
 
 #telegram {
     width: 2.7em;
-    padding: 0.35em;
+    padding: 0.6em;
+}
+
+#linkedin-icon {
+    width: 3.7em;
+    padding: 0.1em;
 }
 
 @media screen and (min-width: 1280px) {
